Fix icon color in dark mode.

--- a/components/frontend/src/semantic_ui_react_wrappers/Form.css
+++ b/components/frontend/src/semantic_ui_react_wrappers/Form.css
@@ -53,6 +53,6 @@ form.ui.inverted.form .sub.header {
     color: rgba(255, 255, 255, 0.8) !important;
 }
 
-form.ui.inverted.form .calendar.icon {
+form.ui.inverted.form .icon {
     color: rgba(255, 255, 255, 0.87);
 }
